testdata/baselines/reference/submodule/conformance/jsdocTemplateClass.errors.txt
templateTagOnClasses.js(1,1): error TS8004: Type parameter declarations can only be used in TypeScript files.
templateTagOnClasses.js(25,1): error TS2322: Type 'boolean' is not assignable to type 'number'.


==== templateTagOnClasses.js (2 errors) ====
    /**
    ~~~
     * @template T
    ~~~~~~~~~~~~~~
     * @typedef {(t: T) => T} Id
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     */
    ~~~
    /** @template T */
    ~~~~~~~~~~~~~~~~~~
    class Foo {
    ~~~~~~~~~~~
        /** @typedef {(t: T) => T} Id2 */
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        /** @param {T} x */
    ~~~~~~~~~~~~~~~~~~~~~~~
        constructor (x) {
    ~~~~~~~~~~~~~~~~~~~~~
            this.a = x
    ~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
        /**
    ~~~~~~~
         * 
    ~~~~~~~
         * @param {T} x 
    ~~~~~~~~~~~~~~~~~~~~
         * @param {Id<T>} y
    ~~~~~~~~~~~~~~~~~~~~~~~
         * @param {Id2} alpha
    ~~~~~~~~~~~~~~~~~~~~~~~~~
         * @return {T}
    ~~~~~~~~~~~~~~~~~~
         */
    ~~~~~~~
        foo(x, y, alpha) {
    ~~~~~~~~~~~~~~~~~~~~~~
            return alpha(y(x))
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
    }
    ~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
    var f = new Foo(1)
    var g = new Foo(false)
    f.a = g.a
    ~~~
!!! error TS2322: Type 'boolean' is not assignable to type 'number'.
    